--- a/Reforcing-JS-Mechanics/timer/index.html
+++ b/Reforcing-JS-Mechanics/timer/index.html
@@ -15,7 +15,8 @@
     
   </section>
 
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/elements.js"></script>
+  <script src="./assets/js/main2.js"></script>
 </body>
 
 </html>
