created new main with

--- a/Reforcing-JS-Mechanics/timer/index.html
+++ b/Reforcing-JS-Mechanics/timer/index.html
@@ -11,9 +11,7 @@
 
 <body>
 
-  <section class="container">
-    
-  </section>
+  <section class="container"></section>
 
   <script src="./assets/js/elements.js"></script>
   <script src="./assets/js/main2.js"></script>
