--- a/Reforcing-JS-Mechanics/calculator/index.html
+++ b/Reforcing-JS-Mechanics/calculator/index.html
@@ -59,7 +59,7 @@
 
   </section>
 
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/main1-functionConstructor.js"></script>
 </body>
 
 </html>
